ready to test first time

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,9 +99,9 @@
     <!-- <div class="wrapper-footer container">
       <footer class="footer">
         <div class="row">
-          <div class="col-xs-4 text-left"><a href="http://cs.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/cse.png"/></a></div>
-          <div class="col-xs-4 text-center"><a href="http://dub.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/dub.png"/></a></div>
-          <div class="col-xs-4 text-right"><a href="http://ee.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/ecePurple.png"/></a></div>
+          <div class="col-sm-4 text-left"><a href="http://cs.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/cse.png"/></a></div>
+          <div class="col-sm-4 text-center"><a href="http://dub.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/dub.png"/></a></div>
+          <div class="col-sm-4 text-right"><a href="http://ee.washington.edu" target="_blank"><img src="{{site.baseurl}}/images/ecePurple.png"/></a></div>
         </div>
       </footer>
     </div> -->
