--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -68,14 +68,14 @@ layout: default
   </section>
   <section>
     <div class="row">
-      <div class="image col-xs-12 col-md-6">
+      <div class="image col-sm-12 col-md-6">
         <div class="image-holder">
           <img src="{{ site.baseurl }}{{ page.image }}"/>
         </div>
         {{page.caption}}
       </div>
 
-      <div class="image col-xs-12 col-md-6">
+      <div class="image col-sm-12 col-md-6">
         <div class="video-holder">
           {{page.video_embed}}
         </div>
