--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -55,8 +55,8 @@ code {
   h2 {
     margin-top: 0px;
     margin-bottom: 2px;
-    font-size: 15px;
-    font-family: $avenirHeavy;
+    font-size: 18px;
+    // font-family: $avenirHeavy;
   }
 
   .btn {
@@ -67,7 +67,7 @@ code {
 
   .award {
     color: #c70000;
-    font-family: $avenirHeavy;
+    // font-family: $avenirHeavy;
   }
   .to-appear {
     color: rgb(13, 95, 180);
@@ -109,6 +109,7 @@ h2 {
 
 p {
   margin-top: 0; padding-top: 0;
+  line-height: 1.2;
 }
 
 code {
