--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,54 @@
 // Syntax highlighting @import is at the bottom of this file
 
 //fonts
+.merriweather-light {
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.merriweather-regular {
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.merriweather-bold {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.merriweather-black {
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.merriweather-light-italic {
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.merriweather-regular-italic {
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.merriweather-bold-italic {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.merriweather-black-italic {
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
 @font-face {
   font-family: 'Ubuntu';
   src: url('fonts/Ubuntu-L.ttf') format('truetype');
@@ -71,6 +119,9 @@
 /* BASE RULES */
 /**************/
 
+body{
+  font-family: "Ubuntu";//$helvetica;
+}
 .btn-primary {
   background-color: $darkPurple; /* Ensure this variable is defined or replace with a hex code */
   color: white; /* Ensures text is readable against the dark background */
@@ -98,16 +149,38 @@
 
 }
 
+.btn-group{
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.year-group-line{
+  border: 0;
+  height: 1px;
+  background: lightgrey;
+  margin-top: 5px;
+}
+
+.year-group {
+  margin-top: 0px; /* Adjust as needed */
+  margin-bottom: 0px; /* Adjust as needed */
+  padding-bottom: 0px;
+}
+
+.year-group h3 {
+  margin-top: 0px; /* Adjust as needed */
+  margin-bottom: 0px; /* Adjust as needed */
+}
 
 
 html {
   font-size: 100%;
 }
-
+// change background color here
 body {
-  // background: $ultraLightPurple;// rgb(255, 247, 247);
-  background: white;
-  font: 16px/1.2 Ubuntu;
+  background: white;//$ultraLightPurple;// rgb(255, 247, 247);
+  //background: white;
+  font-size: 16px/1.2;
   color: black;//$darkGray;
 }
 
@@ -116,12 +189,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Ubuntu;
   color:  $darkPurple;
   font-weight: regular;
 
   line-height: 1.7;
-  margin: 1em 0 15px;
+  margin: 0px;
   padding: 0;
 
   @include mobile {
@@ -146,16 +218,16 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: black;
 }
 
 p {
-  margin: 15px 0;
+  margin: 15px 3px;
 }
 
 p.tight{
-  margin: 0 0;
-  font: 16px/1.2 ubuntu;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -200,15 +272,48 @@ img {
   max-width: 100%;
 }
 
-img.profile-pic{
-  padding-top: 20px;
-  max-height: 250px;
-  flex: 0 0 auto;
+.container {
+  max-width: 900px; // Adjust this value to set the desired width
+  margin: 10px auto;
+  padding: 0;
+
+  // padding: 20px; // Optional: Adjust the padding as needed
 }
 
-@media (max-width: 768px) {
-  .profile-container {
-    text-align: center;
+.container.inside{
+  margin: 0px;
+  padding: 0px;
+  overflow-wrap: break-word;
+}
+
+.container.outside{
+  padding: 3%;
+  display:grid;
+}
+
+.profile-pic{
+  //max-height: 250px;
+  flex: 0 0 auto;
+  margin-top: 0;//10px;
+  border-radius: 5%
+}
+
+.pronoun-container {
+  margin-bottom: 10px; // Adjust as necessary for the desired space
+}
+
+.info-container {
+  margin-top: 20px; // Adjust as necessary for the desired space
+}
+
+.profile-container {
+  text-align: center;
+}
+
+@media (max-width: 576px) {
+  .image-container {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -227,6 +332,10 @@ img.profile-pic{
   
 }
 
+.section {
+  padding: 0px;
+  margin: 0px;
+}
 
 // Specify the color of the selection
 ::-moz-selection {
@@ -349,7 +458,6 @@ img.profile-pic{
 }
 
 .navbar {
-  font-family: $avenir;
   font-size: 18px;
   line-height: 32px;
   background-color: $darkPurple;//rgb(239, 233, 244);
@@ -415,7 +523,7 @@ img.profile-pic{
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: $black;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -469,9 +577,18 @@ img.profile-pic{
 //
 // .main
 //
+#news-content {
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  word-wrap: break-word; /* Allows long words to be broken and wrapped */
+  overflow-wrap: break-word; /* Ensures that the text will wrap */
+}
 
 #main {
-  margin-top: 10px;
+  margin-top: 0px;
+  padding: 0;
 }
 
 .posts > .post {
@@ -518,22 +635,28 @@ footer {
   }
 }
 
+.footer-text{
+  font-size: 12px;
+  color: gray;
+}
+
 /* Resetting some default styles */
 .ant-menu {
   margin-top: 15px;
+  margin-bottom: 10px;
   padding: 0;
   display: flex; /* Aligns items in a row */
   list-style-type: none; /* Removes bullet points */
   background: none; /* Background color */
   justify-content: center; /* Center items horizontally */
-  border-bottom: 1px solid #ddd;;
+  border-bottom: 2px solid #ddd;;
 }
 
 .ant-menu-item {
   margin: 0 15px; /* Spacing between items */
   // padding: 10px 20px; /* Provides padding around the text for better clickability */
   position: relative;
-  color: #333; /* Text color */
+  color: black;//#333; /* Text color */
   cursor: pointer; /* Cursor appears clickable */
   // text-transform: uppercase; /* Uppercase text */
   // font-weight: bold; /* Bold font */
@@ -544,19 +667,25 @@ footer {
 }
 
 .ant-menu-item.active {
-  color: rgb(164, 149, 195); /* Active item color */
+  color: rgb(078, 042, 132); /* Active item color */
 }
 .ant-menu-item.active::after {
   content: '';
   position: absolute;
-  bottom: -1px; /* Aligns right with the menu's bottom border */
+  bottom: -2px; /* Aligns right with the menu's bottom border */
   left: 0;
   width: 100%;
-  height: 1px; /* Height of the underline */
-  background-color: rgb(164, 149, 195); /* or any color you prefer */
+  height: 2px; /* Height of the underline */
+  background-color: rgb(078, 042, 132); /* or any color you prefer */
 }
 
+.row{
+  margin-top: 1px;
+}
 
+.publication-badge{
+  margin-bottom: 1px;
+}
 
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
