--- a/style.scss
+++ b/style.scss
@@ -292,7 +292,7 @@ img {
 }
 
 .profile-pic{
-  //max-height: 250px;
+  max-height: 225px;
   flex: 0 0 auto;
   margin-top: 0;//10px;
   border-radius: 5%
